--- a/package.json
+++ b/package.json
@@ -325,6 +325,11 @@
           "group": "2_delete"
         },
         {
+          "command": "endpoint.deleteRequest",
+          "when": "view == endpointCollections && viewItem == request",
+          "group": "inline"
+        },
+        {
           "command": "endpoint.editRequest",
           "when": "view == endpointCollections && viewItem == request",
           "group": "1_crud@1"
@@ -368,6 +373,16 @@
           "command": "endpoint.deleteEnvironment",
           "when": "view == endpointEnvironments && viewItem =~ /^environment/",
           "group": "2_delete"
+        },
+        {
+          "command": "endpoint.editVariable",
+          "when": "view == endpointEnvironments && viewItem == variable",
+          "group": "inline@1"
+        },
+        {
+          "command": "endpoint.deleteVariable",
+          "when": "view == endpointEnvironments && viewItem == variable",
+          "group": "inline@2"
         },
         {
           "command": "endpoint.editVariable",
