chore: refine paths-ignore in build workflow for markdown files 📄

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,8 @@ on:
         branches:
             - main
         paths-ignore:
-            - "**/*.md"
+            - "docs/**/*.md"
+            - ".github/**/*.md"
             - "**/*.gitignore"
             - "**/*.gitattributes"
 
