feat: implement repo-based collection storage for team sharing 📦
- Add RepoCollectionService to manage collections in `.endpoint/collections/`
- Extend Collection model to include storage type and repo file path
- Implement commands for converting local collections to repo-based
- Update UI to reflect storage location and provide conversion options
- Ensure sensitive auth data is stored locally and not included in repo files

--- a/package.json
+++ b/package.json
@@ -106,6 +106,12 @@
         "category": "Endpoint"
       },
       {
+        "command": "endpoint.convertToRepoCollection",
+        "title": "%commands.convertToRepoCollection.title%",
+        "icon": "$(repo)",
+        "category": "Endpoint"
+      },
+      {
         "command": "endpoint.addRequest",
         "title": "%commands.addRequest.title%",
         "icon": "$(add)",
@@ -339,8 +345,58 @@
           "group": "1_crud@5"
         },
         {
+          "command": "endpoint.convertToRepoCollection",
+          "when": "view == endpointCollections && viewItem == collection",
+          "group": "1_crud@6"
+        },
+        {
           "command": "endpoint.deleteCollection",
           "when": "view == endpointCollections && viewItem == collection",
+          "group": "2_delete"
+        },
+        {
+          "command": "endpoint.addRequest",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "inline@1"
+        },
+        {
+          "command": "endpoint.editCollection",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "inline@2"
+        },
+        {
+          "command": "endpoint.collectionSettings",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "inline@3"
+        },
+        {
+          "command": "endpoint.addRequest",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "1_crud@1"
+        },
+        {
+          "command": "endpoint.editCollection",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "1_crud@2"
+        },
+        {
+          "command": "endpoint.duplicateCollection",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "1_crud@3"
+        },
+        {
+          "command": "endpoint.exportCollection",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "1_crud@4"
+        },
+        {
+          "command": "endpoint.collectionSettings",
+          "when": "view == endpointCollections && viewItem == repoCollection",
+          "group": "1_crud@5"
+        },
+        {
+          "command": "endpoint.deleteCollection",
+          "when": "view == endpointCollections && viewItem == repoCollection",
           "group": "2_delete"
         },
         {
