feat: overhaul history feature for enhanced debugging and security 🔍✨
- Update EndpointSettings to include response storage settings.
- Introduce HistorySanitizer for masking sensitive data in requests and responses.
- Create HistoryPanel for displaying request/response history in a read-only format.
- Implement response body truncation and sanitization based on settings.
- Add CSS styles for the new history view panel.
- Clean up unused settings and related code.

Fixes #9

--- a/package.json
+++ b/package.json
@@ -602,10 +602,16 @@
           ],
           "description": "%configuration.defaultContentType.description%"
         },
-        "endpoint.history.storeResolvedValues": {
+        "endpoint.history.storeResponses": {
           "type": "boolean",
-          "default": false,
-          "description": "%configuration.history.storeResolvedValues.description%"
+          "default": true,
+          "description": "Store response bodies in history (JSON responses only)"
+        },
+        "endpoint.history.maxResponseSize": {
+          "type": "number",
+          "default": 262144,
+          "minimum": 1024,
+          "description": "Maximum response body size to store in bytes (default: 256KB)"
         }
       }
     }
