chore: format build.yml for improved readability ✨ [skip ci]

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,88 +1,88 @@
 name: Build and Publish
 
 on:
-    workflow_dispatch:
-        inputs:
-            publish:
-                description: "Publish to VS Code Marketplace"
-                required: false
-                type: boolean
-                default: false
-    push:
-        branches:
-            - main
-        paths-ignore:
-            - "docs/**/*.md"
-            - ".github/**/*.md"
-            - "**/*.gitignore"
-            - "**/*.gitattributes"
+  workflow_dispatch:
+    inputs:
+      publish:
+        description: "Publish to VS Code Marketplace"
+        required: false
+        type: boolean
+        default: false
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - "docs/**"
+      - ".github/**/*.md"
+      - "**/*.gitignore"
+      - "**/*.gitattributes"
 
 jobs:
-    build:
-        permissions:
-            contents: write
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
+  build:
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: 20
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-            - name: 📦 Install dependencies
-              run: npm install
+      - name: 📦 Install dependencies
+        run: npm install
 
-            - name: 🎁 Install vsce
-              run: npm install -g @vscode/vsce
+      - name: 🎁 Install vsce
+        run: npm install -g @vscode/vsce
 
-            - name: 🖥️ Install cross-env
-              run: npm install -g cross-env
+      - name: 🖥️ Install cross-env
+        run: npm install -g cross-env
 
-            - name: 🏷️ NBGV
-              uses: dotnet/nbgv@master
-              id: nbgv
-              with:
-                  stamp: package.json
+      - name: 🏷️ NBGV
+        uses: dotnet/nbgv@master
+        id: nbgv
+        with:
+          stamp: package.json
 
-            - name: 🗣️ NBGV outputs
-              run: |
-                  echo "SimpleVersion: ${{ steps.nbgv.outputs.SimpleVersion }}"
-                  echo "## Build Details" >> $GITHUB_STEP_SUMMARY
-                  echo "" >> $GITHUB_STEP_SUMMARY
-                  echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
-                  echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
-                  echo "| Build Number | \`${{ steps.nbgv.outputs.SimpleVersion }}\` |" >> $GITHUB_STEP_SUMMARY
-                  echo "| Marketplace | [VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=timheuer.vscode-endpoint) |" >> $GITHUB_STEP_SUMMARY
+      - name: 🗣️ NBGV outputs
+        run: |
+          echo "SimpleVersion: ${{ steps.nbgv.outputs.SimpleVersion }}"
+          echo "## Build Details" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "| --- | --- |" >> $GITHUB_STEP_SUMMARY
+          echo "| Build Number | \`${{ steps.nbgv.outputs.SimpleVersion }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Marketplace | [VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=timheuer.vscode-endpoint) |" >> $GITHUB_STEP_SUMMARY
 
-            - name: 📦 Package
-              run: |
-                  vsce package -o ./${{ github.event.repository.name}}.vsix
+      - name: 📦 Package
+        run: |
+          vsce package -o ./${{ github.event.repository.name}}.vsix
 
-            - name: 📰 Publish
-              if: ${{ (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.publish)) && github.ref == 'refs/heads/main' }}
-              run: npm run deploy
-              env:
-                  VSCE_PAT: ${{ secrets.VSCE_PAT }}
+      - name: 📰 Publish
+        if: ${{ (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.publish)) && github.ref == 'refs/heads/main' }}
+        run: npm run deploy
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
-            - name: 🔗 Marketplace Link
-              if: ${{ (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.publish)) && github.ref == 'refs/heads/main' }}
-              shell: pwsh
-              run: |
-                  Write-Host "::notice::Published to VS Code Marketplace: https://marketplace.visualstudio.com/items?itemName=timheuer.vscode-endpoint"
+      - name: 🔗 Marketplace Link
+        if: ${{ (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.publish)) && github.ref == 'refs/heads/main' }}
+        shell: pwsh
+        run: |
+          Write-Host "::notice::Published to VS Code Marketplace: https://marketplace.visualstudio.com/items?itemName=timheuer.vscode-endpoint"
 
-            - name: ⬆️ Upload artifact
-              uses: actions/upload-artifact@v4
-              with:
-                  name: ${{ github.event.repository.name}}.vsix
-                  path: ./*.vsix
+      - name: ⬆️ Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.repository.name}}.vsix
+          path: ./*.vsix
 
-            - name: 🏷️ Tag and Release
-              id: tag_release
-              uses: softprops/action-gh-release@v1
-              with:
-                  body: Release ${{ steps.nbgv.outputs.SimpleVersion }}
-                  tag_name: ${{ steps.nbgv.outputs.SimpleVersion }}
-                  generate_release_notes: true
-                  files: ./*.vsix
+      - name: 🏷️ Tag and Release
+        id: tag_release
+        uses: softprops/action-gh-release@v1
+        with:
+          body: Release ${{ steps.nbgv.outputs.SimpleVersion }}
+          tag_name: ${{ steps.nbgv.outputs.SimpleVersion }}
+          generate_release_notes: true
+          files: ./*.vsix
